# uk-pv-backtest

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: tests.yml
analysis/: check_csv.py  check_zarr.py
notebooks/: check_blending.ipynb  check_forecast_consistency.ipynb  compare_forecast_mae.ipynb
scripts/: download_pvlive_gsp.py  get_pvlive_data.py  gs_data_download.py  join_forecasts.py  missing_dates.py  rename_forecast_file.py
scripts/archived_scripts/: README.md
scripts/archived_scripts/old_merge/: Interpolate_30min.py  format_forecast_no_norm.py  format_forecasts.py  merge_and_blend.py  pvnet_format.py  pvnet_with_and_without_sat_merge.py  strip_prob_forecasts.py
scripts/archived_scripts/old_merge_prob/: Interpolate_30min_prob.py  format_forecast_no_norm_prob.py  format_forecasts_prob.py  merge_and_blend_prob.py  pvnet_format_prob.py
scripts/nationalxg/: interpolate_30min_prob.py  join_csvs.py  un_norm_forecast.py
scripts/pvnet_prob/: compile_raw_files.py  filter_zarr_to_csv.py  format_forecast.py  merge_and_blend.py
tests/: test_download_pvlive_gsp.py  test_get_pvlive_data.py  test_pvlive_data.py
