[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uk-pv-backtest"
version = "0.1.0"
description = "UK PV backtest tools"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "xarray",
    "pvlive_api",
    "pytz",
    "google-cloud-storage",
    "tqdm",
]

[tool.setuptools]
py-modules = []  # Empty list means no Python modules to install

[tool.ruff]
line-length = 120
lint.select = ["E", "F", "D", "I"]
lint.ignore = ["D10", "D203", "D205", "D212", "D213", "D400", "D404", "D413", "D415", "D417"]
lint.extend-ignore = ["E501", "E302", "E303", "E305", "E306", "E231", "E203", "E202", "E201"]

[tool.pytest.ini_options]
pythonpath = [
  "scripts"
]